log/build_2025-01-17_17-28-25/curb_detection/stderr.log
  File "/home/lance/work_dir/curb_detection/install/curb_detection/lib/python3.10/site-packages/curb_detection/curb_detector.py", line 20
    point_cloud_numpy = np.array(list(pc2.read_points(msg, field_names=("x", "y", "z"))), dtype=np.float32)        print(point_cloud_numpy)
                                                                                                                   ^^^^^
SyntaxError: invalid syntax

